<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory app:title="@string/limiting_header">

    <SwitchPreferenceCompat
        app:key="allow_lower"
        app:title="@string/allow_lower"
        app:defaultValue="false" />

  </PreferenceCategory>

  <PreferenceCategory app:title="@string/password_header">

    <SwitchPreferenceCompat
        app:key="password_protected"
        app:title="@string/password_protected" />

    <Preference
        app:key="password"
        app:title="@string/change_password" />

  </PreferenceCategory>


  <PreferenceCategory app:title="@string/device_history_header">

    <Preference
        app:key="manage_devices"
        app:title="@string/device_history_title"
        app:summary="@string/device_history_summary" />

  </PreferenceCategory>

</PreferenceScreen>